Add more Calcite SQL format options #8337 (#8338)
* Add more Calcite SQL format options #8337

* Fix widget ID prefix, test assertion message, and tooltip grammar

---------

Co-authored-by: mattcasters <mattcasters@gmail.com>